# finalproject

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
delivery/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
delivery/migrations/: 0001_initial.py
foodDelivery/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js  const.js
frontend/src/components/: FoodCard.jsx  MainLayout.jsx  PasswordField.jsx
frontend/src/pages/: Foods.jsx  Login.jsx  Orders.jsx  Register.jsx
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
